# rinha-2026-php

./: .dockerignore  .gitattributes  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  haproxy.cfg  info.json
.github/workflows/: release.yml
data/: labels.u8  vectors.i24
ext/: Cargo.toml
ext/src/: data.rs  lib.rs  response.rs  search.rs  vector.rs
lb/: Cargo.toml  Dockerfile
lb/src/: main.rs
src/: preload.php  server.php
src/public/: index.php
