[package]
name = "rinha"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rinha"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[dependencies]
ext-php-rs = "0.13"
once_cell = "1"
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false }
httparse = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
