[package]
name = "rinha-lb"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rinha-lb"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = 0
overflow-checks = false
incremental = false

[dependencies]
mimalloc = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "net", "io-util", "macros"] }
socket2 = "0.5"
